# indescript

./: .ghci  LICENSE  README.md  indescript.cabal  stack.yaml
app/: Main.hs
src/Control/: IxFix.hs  IxPF.hs  Proc.hs  SemiIso.hs
src/Control/IxPF/: TH.hs
src/Control/SemiIso/: TH.hs
src/Data/: Annotation.hs  Convertible.hs  Grammar.hs
src/Data/Grammar/: Earley.hs
src/Language/Indescript/: ADT.hs  AST.hs  Lexer.x  Parser.hs  PostParsing.hs  Syntax.hs  TypeInference.hs
src/Language/Indescript/AST/: SourcePos.hs
src/Language/Indescript/Parser/: Lexer.hs  Lexer.x  Lexer.x.bak  Pos.hs  Poster.hs  Prim.hs  SourcePos.hs  Test.hs
test/: Spec.hs  test-lexer.hs
test/Test/Parser/: Decl.hs  Helper.hs  SimpleCombinators.hs
