name:                indescript
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/notcome/indescript#readme
license:             BSD3
license-file:        LICENSE
author:              Minsheng Liu
maintainer:          lambda@liu.ms
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Indescript.ADT
                     , Language.Indescript.TypeInference
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , array
  build-tools:         alex
  other-modules:       Language.Indescript.Lexer
  default-language:    Haskell2010

executable indescript-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , mtl
                     , pretty
                     , indescript
  default-language:    Haskell2010

test-suite indescript-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , indescript
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/notcome/indescript
