name:                indescript
version:             0.1.0.0
synopsis:            A toy functional language compiler implemented using
                     peculiar Haskell techniques.
description:         Not written yet.
homepage:            http://github.com/notcome/indescript
license:             BSD3
license-file:        LICENSE
author:              Minsheng Liu
maintainer:          lambda@liu.ms
copyright:           2016 Minsheng Liu
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.SemiIso
                     , Data.Grammar
                     , Data.Grammar.Earley
                     , Language.Indescript.AST
  build-depends:       base >= 4.7 && < 5
                     , template-haskell
                     , Earley
  default-language:    Haskell2010

executable isc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , indescript
  default-language:    Haskell2010

test-suite isc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , indescript
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/notcome/indescript
